# jsontoparquet

./: .gitignore  README.md  etl.py  pipeline.py  pyproject.toml
